# proLog

./: .gitignore  .project  CMakeLists.txt  Makefile  README.md  pom.xml
src/: CMakeLists.txt  main.cpp
src/main/java/com/oesus/testable/: Testable.java
src/main/java/com/oesus/testable/proLog/: ProLog.java
src/main/java/com/oesus/testable/proLog/Logger/: Log.java  LoggerServices.java
src/main/java/com/oesus/testable/proLog/enums/: ConsoleColors.java  LogLevel.java
src/prolog/: CMakeLists.txt  Configurator.cpp  Prolog.cpp
src/prolog/config/: CMakeLists.txt  config.hpp
src/prolog/config/include/config/: Config.hpp  config.hpp
src/prolog/enums/: CMakeLists.txt  ELoglevel.hpp  EnumToString.cpp
src/prolog/enums/include/enums/: ELogLevel.hpp
src/prolog/include/prolog/: Configurator.hpp  Prolog.hpp
src/prolog/log/: CMakeLists.txt  Log.cpp
src/prolog/log/include/log/: Log.hpp
src/prolog/log_object/: CMakeLists.txt  Log.cpp
src/prolog/log_object/include/log_object/: Log.hpp
src/prolog/log_object/inlcude/log_object/: Log.hpp
src/prolog/private/enums/: ELogLevel.hpp
src/prolog/server/: CMakeLists.txt  Server.cpp
src/prolog/server/include/server/: Server.hpp  fwd.hpp
src/testable/: CMakeLists.txt  Testable.cpp
src/testable/include/testable/: Testable.hpp
